2018-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/Makevars.win: Reflect updated directory layout in updated
	Windows library

	* man/AffineSwaption.Rd: Restore example now that Windows works
	* man/BermudanSwaption.Rd: Idem
	* man/DiscountCurve.Rd: Idem

2018-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* man/Bond.Rd: Restore example with correctly-built Windows library
	* man/FixedRateBond.Rd: Idem
	* man/FloaringRateBond.Rd: Idem
	* man/SabrSwaption.Rd: Idem
	* man/ZeroCouponBond.Rd: Idem

	* tests/RQuantLib.R: Restore tests for Windows
	* tests/doRUnit.R: Idem

2018-11-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/CallableBond.Rd: Set evaluation date

	* src/Makevars.in (PKG_CXXFLAGS): Add -DBOOST_NO_AUTO_PTR
	* src/Makevars.win (PKG_CXXFLAGS): Idem

	* inst/NEWS.Rd: A few post-release edits

2018-11-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.6

2018-11-22  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Test for QuantLib 1.14
	* configure: Idem

	* tools/winlibs.R: Updated for QL 1.14 build by Josh

	* man/Bond.Rd: Do not run examples to avoid Windows issue
	* man/FixedRateBond.Rd: Idem
	* man/FloaringRateBond.Rd: Idem
	* man/SabrSwaption.Rd: Idem
	* man/ZeroCouponBond.Rd: Idem

	* tests/RQuantLib.R: Test for Windows, only run a portion of tests
	* tests/doRUnit.R: Test for Windows

	* src/Makevars.win: Set -Wno-deprecated-declarations options to
	make the build less noisy

2018-11-20  Dirk Eddelbuettel  <edd@debian.org>

	* man/Bond.Rd: Example now uses dayCounter not accrualDayCounter
	* man/FixedRateBond.Rd: Idem
	* tests/RQuantLib.R: Idem
	* tests/RQuantLib.Rout.save: Idem

2018-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars.in (PKG_CXXFLAGS): No longer need the opt-in for
	-DRCPP_NEW_DATE_DATETIME_VECTORS which is now on by default
